<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CharacteristicActivity">

    <include
        android:id="@+id/layout_details"
        layout="@layout/layout_details"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ble_action_read"
            style="@style/button_char_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/read"/>

        <Button
            android:id="@+id/ble_action_write"
            style="@style/button_char_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write"/>

        <Button
            android:id="@+id/ble_action_notify"
            style="@style/button_char_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notify"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/button_ascii"
            style="@style/button_char_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/button_label_ascii"/>

        <Button
            android:id="@+id/button_hex"
            style="@style/button_char_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/button_label_hex"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_readable_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="false"
            android:editable="false"
            android:gravity="top"
            android:hint="@string/hint_readable_data"
            android:inputType="none"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/edit_text_writable_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/hint_writable_data"/>
    </LinearLayout>

</LinearLayout>
