<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_details_characteristic"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    tools:showIn="@layout/layout_details"
    tools:visibility="visible">

    <TextView
        android:id="@+id/title_characteristic_name"
        style="@style/data_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/label_characteristic_data"/>

    <TextView
        android:id="@+id/label_characteristic_uuid"
        style="@style/data_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_characteristic_name"
        android:text="@string/label_uuid"/>

    <TextView
        android:id="@+id/characteristic_uuid"
        style="@style/data_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_characteristic_name"
        android:layout_toRightOf="@id/label_characteristic_uuid"
        android:text="@string/no_data"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/prop_read"
            style="@style/textview_permissions_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_selector"

            android:enabled="false"
            android:text="@string/permission_read"
            android:textColor="@color/text_color_selector"/>

        <TextView
            android:id="@+id/prop_write"
            style="@style/textview_permissions_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/background_selector"
            android:enabled="false"
            android:text="@string/permission_write"
            android:textColor="@color/text_color_selector"/>

        <TextView
            android:id="@+id/prop_notify"
            style="@style/textview_permissions_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_selector"
            android:enabled="false"
            android:text="@string/permission_notify"
            android:textColor="@color/text_color_selector"/>
    </LinearLayout>

</RelativeLayout>