<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/title_device_data"
            style="@style/data_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_device_data"/>

        <TextView
            android:id="@+id/label_device_address"
            style="@style/data_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_device_data"
            android:text="@string/label_device_address"/>

        <TextView
            android:id="@+id/device_address"
            style="@style/data_value_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_device_data"
            android:layout_toRightOf="@id/label_device_address"
            android:text="@string/no_data"/>

        <TextView
            android:id="@+id/title_service_data"
            style="@style/data_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_device_address"
            android:text="@string/title_service_data"/>

        <TextView
            android:id="@+id/label_service_type"
            style="@style/data_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_service_data"
            android:text="@string/label_service_type"/>

        <TextView
            android:id="@+id/service_type"
            style="@style/data_value_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_service_data"
            android:layout_toRightOf="@id/label_service_type"
            android:text="@string/no_data"/>


        <TextView
            android:id="@+id/label_service_uuid"
            style="@style/data_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_service_type"
            android:text="@string/label_uuid"/>

        <TextView
            android:id="@+id/service_uuid"
            style="@style/data_value_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/service_type"
            android:layout_toRightOf="@id/label_service_uuid"
            android:text="@string/no_data"/>

        <TextView
            android:id="@+id/label_service_id"
            style="@style/data_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_service_uuid"
            android:text="@string/label_instance_id"/>

        <TextView
            android:id="@+id/service_id"
            style="@style/data_value_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/service_uuid"
            android:layout_toRightOf="@id/label_service_id"
            android:text="@string/no_data"/>

        <TextView
            android:id="@+id/title_characteristic_data"
            style="@style/data_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/service_id"
            android:text="@string/label_characteristic_data"/>


        <TextView
            android:id="@+id/characteristic_uuid_label"
            style="@style/data_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_characteristic_data"
            android:text="@string/label_uuid"/>

        <TextView
            android:id="@+id/characteristic_uuid"
            style="@style/data_value_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_characteristic_data"
            android:layout_toRightOf="@id/characteristic_uuid_label"
            android:text="@string/no_data"/>
    </RelativeLayout>
</merge>