<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_details_service"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/margin_small"
    android:visibility="gone"
    tools:showIn="@layout/layout_details"
    tools:visibility="visible">

    <TextView
        android:id="@+id/title_service_name"
        style="@style/data_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/title_service_data"/>

    <TextView
        android:id="@+id/label_service_uuid"
        style="@style/data_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_service_name"
        android:text="@string/label_uuid"/>

    <TextView
        android:id="@+id/service_uuid"
        style="@style/data_value_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_service_name"
        android:layout_toRightOf="@id/label_service_uuid"
        android:text="@string/no_data"/>


</RelativeLayout>
